twitter share added and posts revised

--- a/_posts/2014-09-16-intscope.md
+++ b/_posts/2014-09-16-intscope.md
@@ -1,9 +1,13 @@
 ---
 layout: post
-title: "IntScope"
+title: "IntScope (2009)"
 categories: notes
-tags: 程序分析 最弱前件 Oakland 
+tags: 程序分析 最弱前件 NDSS 
 ---
+
+> 原文：[IntScope: Automatically Detecting Integer Overflow Vulnerability in X86 Binary Using Symbolic Execution][src]
+
+[src]: http://www.internetsociety.org/doc/intscope-automatically-detecting-integer-overflow-vulnerability-x86-binary-using-symbolic-0
 
 Intscope是专门针对整数溢出漏洞的静态分析工具。没有一个基于fuzz的二进制代码分析是专门针对整数溢出的，而且即使fuzzing工具可以探索所有的程序路径，漏洞还是可能无法重现，如果它没有生成对应的输入的话。
 
