--- a/_posts/2014-09-15-lambda-4.md
+++ b/_posts/2014-09-15-lambda-4.md
@@ -102,6 +102,45 @@ Y组合子的特别之处在于它应用自身来创造本身，也就是说 `(Y
 
 第一种顺序就是我们所说的「惰性求值」（Lazy evaluation）：我们不计算函数的参数，直到我们需要使用它们。第二种叫「急切求值」（eager evaluation）：我们总是在把参数传递给函数之前进行计算。（在实际的编程语言中，Lisp语言，Scheme，和ML使用急切求值计算lambda演算，Haskell和Miranda则使用惰性值计算lambda演算。）我上面描述的Y组合子是惰性求值。如果我们用急切求值，那么上述Y组合子是导不出来的——事实上，它会永远地复制Y。
 
+# 一点个人解释
+
+## Y在定义递归函数中的作用
+
+首先，在lambda演算中，函数名不是不可缺少的，没有函数名的函数称为「匿名函数」。lambda符号的引入就是为了去掉函数名这个冗余，使定义匿名函数成为可能。但是当需要定义的函数含有递归时，比如阶乘`factorial`，也就是函数的定义部分需要引用函数自身的时候，没有函数名意味着用lambda演算无法直接引用函数自身。怎么办呢？
+
+一种办法是设计另一个函数G，它接受一个函数作为参数，返回值也是一个函数（这种参数是函数的函数称为高阶函数）。然后，我们把`factorial`当做参数传给G，如果G返回的函数也是`factorial`的话，就圆满了。也就是说，这个G需要满足两个特征：
+
+1. G的定义中不会出现`factorial`，但是它可以接受`factorial`作为参数。回想一下一阶函数`f(x) = x * x`，它的定义里没有出现数字「1」，但是「1」可以传给它进行计算。而在构造G时，`factorial`就相当于数字「1」。
+2. 方程`G(f)=f`的解是`factorial`。这样我们就不用直接定义`factorial`，求解这个关于G的方程就可以得到`factorial`的定义了。
+
+于是，我们需要干两件事：找到G，和找到求解`G(f)=f`的办法。寻找G很简单，既然我们想让`G(factorial)=factorial`，那么把`factorial`定义中关于`factorial`的引用参数化就可以了，即：
+
+    let G = lambda f . lambda n . IsZero n 1 (Mult n ( f (Pred n))) 
+
+这就是上面的`metafact`函数。这种构造方法可以用于构造任意递归函数的「G」。
+
+然后我们需要找到求解方程`G(f)=f`的办法。满足`f(x)=x`的x称为函数`f`的不动点，`f`是高阶函数时也不例外。Y组合子的作用就是计算函数的不动点，它对所有的函数`f`都满足`f(Y(f)) = Y(f)`，推理如下：
+    
+    Y (f) = (lambda y . (lambda x . y (x x)) (lambda x . y (x x))) f
+        = (lambda x . f (x x)) (lambda x . f (x x)) 
+        = (lambda x . f (x x)) (lambda a . f (a a))
+        = f ((lambda a . f (a a)) (lambda a . f (a a)))
+        = f ((lambda x . f (x x)) (lambda x . f (x x)))
+        = f (Y(f))
+
+于是，`factorial`的定义就可以写成：
+
+    factorial x = (Y metafact) x 
+                = {[lambda y . (lambda t . y (t t)) (lambda t . y (t t))]
+                   [lambda f . lambda n . IsZero n 1 (Mult n ( f (Pred n)))]} x
+
+这下不用引用自身了。
+
+<!-- ## Y怎么来的
+
+## 命令式语言中的递归实现
+## 函数式语言中的递归实现 -->
+
 [1]: http://goodmath.blogspot.com/
 [lc4]: http://goodmath.blogspot.com/2006/05/why-oh-why-y.html
 [rec]: http://goodmath.blogspot.com/2006/03/clarifying-recursion.html
