reason out Y from recursive function

--- a/_posts/2014-09-15-lambda-4.md
+++ b/_posts/2014-09-15-lambda-4.md
@@ -130,13 +130,59 @@ Y组合子的特别之处在于它应用自身来创造本身，也就是说 `(Y
 
 于是，`factorial`的定义就可以写成：
 
-    factorial x = (Y metafact) x 
+    factorial n = (Y metafact) n 
                 = {[lambda y . (lambda t . y (t t)) (lambda t . y (t t))]
-                   [lambda f . lambda n . IsZero n 1 (Mult n ( f (Pred n)))]} x
+                   [lambda f . lambda n . IsZero n 1 (Mult n ( f (Pred n)))]} n
 
 这下不用引用自身了。
 
-<!-- ## Y怎么来的
+## Y怎么来的
+
+现在回到第一版的阶乘。我们虽然不能直接引用自身，但可以把它作为参数传进来，也就是说： 
+
+    let fact2 = lambda f. lambda n . IsZero n 1 (Mult n ( f (Pred n))) 
+
+这样，在计算5的阶乘时，我们只需要计算`fact2(fact2, 5)`就可以了。定义并没有引用自身，只是在使用的时候把自己当参数传过去。是不是很简单？
+
+但是，这个计算式是错误的：fact2的定义要求它接受两个参数，其中参数f是只接受一个参数的函数，于是计算式中第二个的fact2在参数数量上是无法和定义中的f匹配的。那怎么办？
+
+不要紧，我们可以修改一下f的形式，让它接受两个参数。即：
+
+    let fact3 = lambda f. lambda n . IsZero n 1 (Mult n ( f [f, (Pred n)])) 
+
+这下计算`fact3(fact3, 5)`就不会出错了。除了这个定义有点丑……
+
+如果对fact3做下化简又如何呢？首先是对拥有两个参数的f进行柯里化变换：
+
+    let fact3 = lambda h . lambda n . IsZero n 1 (Mult n ( h h (Pred n))) 
+              = lambda h . lambda n . IsZero n 1 (Mult n ( (h h) (Pred n)))
+
+这样计算阶乘的方式也相应变成了`(fact3 fact3) 5`。接着把`(h h)`用函数`q`代替，则有
+
+    let fact3 = lambda h . lambda n . [lambda q . IsZero n 1 (Mult n ( q (Pred n)))] (h h)
+              = lambda h . [lambda n . lambda q . IsZero n 1 (Mult n ( q (Pred n)))] (h h)
+
+仔细观察中括号部分，参数h对于这部分是完全自由的，于是我们可以用另一个函数定义替换之：
+
+    let f0 = lambda n . lambda q . IsZero n 1 (Mult n ( q (Pred n)))
+    let fact3 = lambda h . f0 (h h)
+
+是不是觉得`f0`眼熟？没错，这就是`metafact`！不过我们先把`f0`放一边，看看如何使用这个定义计算n的阶乘。
+
+    factorail n = (fact3 fact3) n 
+                = (lambda h . f0 (h h)) (lambda h . f0 (h h)) n
+
+把上面的式子写成 `function_name x`的形式：
+
+    factorial n = {[lambda f . (lambda h . f (h h)) (lambda h . f (h h))] f0} n
+
+注意大括号中的部分，是不是更眼熟了？这就是Y的定义。真是怎么绕都扰不过去的Y啊……
+
+    factorial n = {[lambda f . (lambda h . f (h h)) (lambda h . f (h h))] f0} n
+                = {Y f0} n
+                = (Y metafact) n
+
+<!-- 
 
 ## 命令式语言中的递归实现
 ## 函数式语言中的递归实现 -->
