add a new tag to dta-fse

--- a/_posts/2014-09-20-dta-fse.md
+++ b/_posts/2014-09-20-dta-fse.md
@@ -2,7 +2,7 @@
 layout: post
 title: "动态污点分析和前向符号执行 (2010)"
 categories: notes
-tags: 程序分析 污点分析 符号执行 Oakland 
+tags: 程序分析 污点分析 符号执行 Oakland 综述
 ---
 
 > 原文：[All You Ever Wanted to Know about Dynamic Taint Analysis and Forward Symbolic Execution (but Might Have Been Afraid to Ask)][src] 
