bug fix in lambda-4

--- a/_posts/2014-09-15-lambda-4.md
+++ b/_posts/2014-09-15-lambda-4.md
@@ -182,10 +182,7 @@ Y组合子的特别之处在于它应用自身来创造本身，也就是说 `(Y
                 = {Y f0} n
                 = (Y metafact) n
 
-<!-- 
-
-## 命令式语言中的递归实现
-## 函数式语言中的递归实现 -->
+<!-- ## 命令式语言中的递归实现 ## 函数式语言中的递归实现 -->
 
 [1]: http://goodmath.blogspot.com/
 [lc4]: http://goodmath.blogspot.com/2006/05/why-oh-why-y.html
