Several paper notes posted

--- a/_posts/2014-09-16-intscope.md
+++ b/_posts/2014-09-16-intscope.md
@@ -2,7 +2,7 @@
 layout: post
 title: "IntScope (2009)"
 categories: notes
-tags: 程序分析 最弱前件 NDSS 
+tags: 程序分析 污点分析 符号执行 binary分析 NDSS 
 ---
 
 > 原文：[IntScope: Automatically Detecting Integer Overflow Vulnerability in X86 Binary Using Symbolic Execution][src]
