--- a/_posts/2015-11-17-diode.md
+++ b/_posts/2015-11-17-diode.md
@@ -2,12 +2,12 @@
 layout: post
 title: "Targeted Automatic Integer Overflow Discovery Using Goal-Directed Conditional Branch Enforcement (2015)"
 categories: notes
-tags: 整数溢出 污点分析 程序分析 动态执行 ASPLOS 
+tags: 漏洞检测 整数溢出 污点分析 程序分析 动态执行 binary分析 ASPLOS 
 ---
 
 > 原文：[Targeted Automatic Integer Overflow Discovery Using Goal-Directed Conditional Branch Enforcement][src] 
 
-[src]: dl.acm.org/citation.cfm?id=2694389
+[src]: http://dl.acm.org/citation.cfm?id=2694389
 
 ## DIODE工具
 利用动态污点分析和符号执行自动生成导致在关键位置发生整数溢出的输入。
