--- a/_posts/2016-04-19-dowser.md
+++ b/_posts/2016-04-19-dowser.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Dowsing for overflows: A guided fuzzer to find buffer boundary violations"
+title: "Dowsing for overflows: A guided fuzzer to find buffer boundary violations(2013)"
 categories: notes
 tags: 漏洞检测 模糊测试 符号执行 源代码分析 程序分析 UsenixSec 
 ---
