minor bugs fixed

--- a/_posts/2016-06-30-angr.md
+++ b/_posts/2016-06-30-angr.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "(State of) The Art of War: Offensive Techniques in Binary Analysis"
+title: "(State of) The Art of War: Offensive Techniques in Binary Analysis (2016)"
 categories: notes
-tags: 漏洞检测 模糊测试 符号执行 binary分析 程序分析 S&P 
+tags: 漏洞检测 模糊测试 符号执行 binary分析 程序分析 Oakland 
 ---
 
 > 原文：[(State of) The Art of War: Offensive Techniques in Binary Analysis][src] 
