--- a/_posts/2016-08-30-afl-fast.md
+++ b/_posts/2016-08-30-afl-fast.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Coverage-based Greybox Fuzzing as Markov Chain"
+title: "Coverage-based Greybox Fuzzing as Markov Chain (2016)"
 categories: notes
 tags: 模糊测试 随机过程 Marvkov链  CCS 
 ---
