--- a/_posts/2014-09-15-lambda-4.md
+++ b/_posts/2014-09-15-lambda-4.md
@@ -48,7 +48,7 @@ Y组合子的特别之处在于它应用自身来创造本身，也就是说 `(Y
 * alpha[x/z]变换第二个lambda：`(lambda x . Y (x x)) (lambda z. Y (z z))` 
 * beta规约：`Y ((lambda z. Y (z z)) (lambda z. Y (z z))) `
 * 展开前面的Y，并`alpha[y/a][x/b]`变换：`(lambda a . (lambda b . a (b b)) (lambda b . a (b b))) ((lambda z . Y (z z)) ( lambda z . Y (z z)))` 
-* beta规约：`(lambda b . ((lambda z. Y (z z)) (lambda z. Y (z z))) (b b)) (lambda b . ((lambda * z. Y (z z)) (lambda z. Y (z z))) (b b))` 
+* beta规约：`(lambda b . ((lambda z. Y (z z)) (lambda z. Y (z z))) (b b)) (lambda b . ((lambda z. Y (z z)) (lambda z. Y (z z))) (b b))` 
 
 现在，仔细看该表达式。这是`(Y (Y Y))` [记得前面的`(Y Y) = (lambda x . Y (x x)) (lambda x . Y (x x))`吧]。所以， `Y Y = Y (Y Y)`，这是Y的魔力：它再造了本身。`(Y Y) = Y (Y Y) = Y (Y (Y Y))`，子子孙孙无穷匮也。 
 
