--- a/_posts/2014-09-15-lambda-3.md
+++ b/_posts/2014-09-15-lambda-3.md
@@ -32,7 +32,7 @@ tags: ["翻译", "lambda演算", "function programming"]
 * alpha变换true和false：`BoolAnd (lambda xt yt . xt) (lambda xf yf . yf) `
 * 现在，展开BoolAnd：`(lambda x y. x y FALSE) (lambda xt yt . xt) (lambda xf yf . yf)` 
 * beta规约：`(lambda xt yt.xt) (lambda xf yf. yf) FALSE` 
-* 再次beta规约：`(lambda xf xf . yf)` 
+* 再次beta规约：`(lambda xf yf . yf)` 
 
 于是我们得到结果：`BoolAnd TRUE FALSE = FALSE`。再让我们来看看`BoolAnd FALSE TRUE`： 
 
